Include categories to ChallengeTemplate
